syntax = "proto3";

package cheqd.resource.v2;

option go_package = "github.com/cheqd/cheqd-node/x/resource/types/v2";

message Resource {
  bytes data = 1;
}

message ResourceWithMetadata {
  Resource resource = 1;
  Metadata metadata = 2;
}

message Metadata {
  string collection_id = 1;
  string id = 2;
  string name = 3;
  string version = 4;
  string resource_type = 5;
  repeated string also_known_as = 6;

  string media_type = 7;
  string created = 8;
  bytes checksum = 9;
  string previous_version_id = 10;
  string next_version_id = 11;
}
